# mpvEx-vulkan

./: .gitmodules  README.md  build.gradle.kts  gradle.properties
.github/workflows/: build.yml  pre-release.yml  preview.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/scripts/: ytdl_hook.lua
app/src/main/assets/ytdl/: yt-dlp.py
app/src/main/cpp/: CMakeLists.txt  adrenotools_bridge.cpp
app/src/main/java/app/gyrolet/mpvrx/di/: DomainModule.kt
app/src/main/java/app/gyrolet/mpvrx/domain/ytdl/: YtdlManager.kt
app/src/main/java/app/gyrolet/mpvrx/preferences/: AdvancedPreferences.kt  AppearancePreferences.kt  SeekbarStyle.kt
app/src/main/java/app/gyrolet/mpvrx/presentation/components/: ConfirmDialog.kt  LiquidDialog.kt  PlayerSheet.kt  RepeatingIconButton.kt
app/src/main/java/app/gyrolet/mpvrx/ui/components/: AdaptiveSwitch.kt  LiquidButton.kt  LiquidToggle.kt
app/src/main/java/app/gyrolet/mpvrx/ui/player/: MPVView.kt
app/src/main/java/app/gyrolet/mpvrx/ui/preferences/: AdvancedPreferencesScreen.kt  AppearancePreferencesScreen.kt  YtdlUpdateDialog.kt
app/src/main/java/app/gyrolet/mpvrx/ui/utils/: LiquidGlassUtils.kt
app/src/main/java/app/marlboroadvance/mpvex/: App.kt  MainActivity.kt
app/src/main/java/app/marlboroadvance/mpvex/database/entities/: PlaybackStateEntity.kt  PlaylistEntity.kt  PlaylistItemEntity.kt  RecentlyPlayedEntity.kt  VideoMetadataEntity.kt
app/src/main/java/app/marlboroadvance/mpvex/domain/browser/: FileSystemItem.kt
app/src/main/java/app/marlboroadvance/mpvex/domain/network/: NetworkConnection.kt  NetworkFile.kt
app/src/main/java/app/marlboroadvance/mpvex/preferences/: LiquidUIPreferences.kt  SeekbarStyle.kt
app/src/main/java/app/marlboroadvance/mpvex/presentation/components/: PlayerSheet.kt
app/src/main/java/app/marlboroadvance/mpvex/ui/browser/: MainScreen.kt
app/src/main/java/app/marlboroadvance/mpvex/ui/player/: HardwareHudOverlay.kt  MPVView.kt  PlayerActivity.kt  PlayerViewModel.kt
app/src/main/java/app/marlboroadvance/mpvex/ui/preferences/: AboutScreen.kt  (+11 more)
app/src/main/kotlin/app/marlboroadvance/mpvex/system/: AdrenoTools.kt  TurnipEnvManager.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+66 files in other folders)
